<resources>
    <string name="app_name">Guess The Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="guess">Guess</string>
    <string name="play_again">Play Again?</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing not available</string>
    <string name="find">Find</string>
</resources>