<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
<variable
    name="viewModel"
    type="com.peter.guessthenumber.framework.ui.game.GameViewModel" />
    </data>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.title}"
            android:gravity="center"
            tools:text="level"
            android:textSize="15sp"
            android:textColor="@color/red_900"
            android:layout_margin="10sp"
            app:fontFamily="@font/fredoka"/>

            <TextView
                android:id="@+id/status"
                android:text="@{viewModel.status}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textColor="@color/red_900"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/fredoka"
                tools:text="status" />

            <TextView
        android:id="@+id/attempts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="attempts"
        android:textSize="15sp"
                android:layout_margin="20dp"
                app:fontFamily="@font/fredoka"

                android:textColor="@color/indigo_a100"/>


        <EditText
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter Number"
            android:padding="20dp"
            app:fontFamily="@font/fredoka"
            android:text="@={viewModel.userNumber}"
            android:gravity="center"
            android:textSize="20sp"

            android:inputType="number"
            android:layout_margin="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:onClick="@{()->viewModel.onGuessClicked()}"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:fontFamily="@font/fredoka"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/play_again"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="@string/play_again"
                android:textSize="15sp"
                android:layout_margin="20dp"
                app:fontFamily="@font/fredoka"
                android:text="@string/play_again"
                android:onClick="@{()->viewModel.onPlayAgain()}"
                android:textColor="@color/red_900"/>
            <TextView
                android:layout_weight="2"
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="@string/share"
                android:textSize="15sp"
                android:layout_margin="20dp"
                app:fontFamily="@font/fredoka"
                android:text="@string/share"
                android:onClick="@{()->viewModel.onShare()}"
                android:textColor="@color/red_900"/>

        </LinearLayout>

    </LinearLayout>
</layout>