<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
<variable
    name="viewModel"
    type="com.peter.guessthenumber.framework.ui.selection.LevelSelectionViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        tools:context=".LevelSelectionFragment">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="20dp"
            app:cardBackgroundColor="@color/level1"
            app:cardCornerRadius="20dp"
            android:onClick="@{()->viewModel.setLevel1()}"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    app:fontFamily="@font/fredoka"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/easy"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="20dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/level2"
            app:cardCornerRadius="20dp"
            android:onClick="@{()->viewModel.setLevel2()}"

            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView                app:fontFamily="@font/fredoka"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:text="@string/medium"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="20dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/level3"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:onClick="@{()->viewModel.setLevel3()}"

            app:cardMaxElevation="12dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    app:fontFamily="@font/fredoka"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:text="@string/hard"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>